Moved all clases in TetrisAPI namespace

--- a/TetrisAPI/TetrisAPI.vcxproj.filters
+++ b/TetrisAPI/TetrisAPI.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="IColorManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="EColor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
