--- a/TetrisAPI/TetrisAPI.vcxproj
+++ b/TetrisAPI/TetrisAPI.vcxproj
@@ -140,6 +140,7 @@
   <ItemGroup>
     <ClInclude Include="Block.h" />
     <ClInclude Include="Color.h" />
+    <ClInclude Include="EColor.h" />
     <ClInclude Include="Grid.h" />
     <ClInclude Include="IColorManager.h" />
     <ClInclude Include="Position.h" />
