--- a/TetrisAPI/TetrisAPI.vcxproj.filters
+++ b/TetrisAPI/TetrisAPI.vcxproj.filters
@@ -53,5 +53,8 @@
     <ClInclude Include="EColor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="EResult.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
