--- a/TetrisAPI/TetrisAPI.vcxproj.filters
+++ b/TetrisAPI/TetrisAPI.vcxproj.filters
@@ -56,5 +56,14 @@
     <ClInclude Include="EResult.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="EInputType.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="IInputManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="IGame.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
