--- a/TetrisAPI/TetrisAPI.vcxproj
+++ b/TetrisAPI/TetrisAPI.vcxproj
@@ -141,9 +141,12 @@
     <ClInclude Include="Block.h" />
     <ClInclude Include="Color.h" />
     <ClInclude Include="EColor.h" />
+    <ClInclude Include="EInputType.h" />
     <ClInclude Include="EResult.h" />
     <ClInclude Include="Grid.h" />
     <ClInclude Include="IColorManager.h" />
+    <ClInclude Include="IGame.h" />
+    <ClInclude Include="IInputManager.h" />
     <ClInclude Include="Position.h" />
     <ClInclude Include="Test.h" />
   </ItemGroup>
