--- a/TetrisAPI/TetrisAPI.vcxproj
+++ b/TetrisAPI/TetrisAPI.vcxproj
@@ -134,7 +134,9 @@
     <ClCompile Include="Block.cpp" />
     <ClCompile Include="Color.cpp" />
     <ClCompile Include="Grid.cpp" />
+    <ClCompile Include="Observable.cpp" />
     <ClCompile Include="Position.cpp" />
+    <ClCompile Include="ScoreManager.cpp" />
     <ClCompile Include="Test.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -142,12 +144,16 @@
     <ClInclude Include="Color.h" />
     <ClInclude Include="EColor.h" />
     <ClInclude Include="EInputType.h" />
+    <ClInclude Include="EBlockType.h" />
     <ClInclude Include="EResult.h" />
     <ClInclude Include="Grid.h" />
     <ClInclude Include="IColorManager.h" />
     <ClInclude Include="IGame.h" />
     <ClInclude Include="IInputManager.h" />
+    <ClInclude Include="IObserver.h" />
+    <ClInclude Include="Observable.h" />
     <ClInclude Include="Position.h" />
+    <ClInclude Include="ScoreManager.h" />
     <ClInclude Include="Test.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
