--- a/TetrisAPI/TetrisAPI.vcxproj.filters
+++ b/TetrisAPI/TetrisAPI.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="Timer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ColorManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Position.h">
@@ -87,6 +90,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Timer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ColorManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
