Add strategy for changing game difficulty
- The 'hard' difficulty needs to be adjusted in terms of speed

--- a/TetrisAPI/TetrisAPI.vcxproj.filters
+++ b/TetrisAPI/TetrisAPI.vcxproj.filters
@@ -92,5 +92,11 @@
     <ClInclude Include="BaseObserver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="IGameModeStrategy.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GameModeStrategies.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
