--- a/TetrisAPI/TetrisAPI.vcxproj
+++ b/TetrisAPI/TetrisAPI.vcxproj
@@ -149,9 +149,11 @@
     <ClInclude Include="EInputType.h" />
     <ClInclude Include="EBlockType.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="GameModeStrategies.h" />
     <ClInclude Include="Grid.h" />
     <ClInclude Include="IColorManager.h" />
     <ClInclude Include="IGame.h" />
+    <ClInclude Include="IGameModeStrategy.h" />
     <ClInclude Include="IInputManager.h" />
     <ClInclude Include="IObserver.h" />
     <ClInclude Include="Observable.h" />
